# clucene_learn

./: .gitmodules  CMakeLists.txt
src/: main.cpp
